--- a/Arquivo.html
+++ b/Arquivo.html
@@ -50,7 +50,7 @@
                         <div class="main-menu">
                             <ul>
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="Libro.html">Livro</a></li>
+                                <li><a href="Livro.html">Livro</a></li>
                                 <li><a href="LP.html">LP</a></li>
                                 <li><a href="Mapa.html">Mapa</a></li>
                                 <li><a href="Arquivo.html">Arquivo</a></li>
@@ -114,25 +114,13 @@
 
 
                                 <div class="description">
-                                    <ul>
-                                        <p style="margin: 0; height: 5mm;"></p>
-                                        <li><a href="debruits.html">Experiência 1</a></li>
-                                        <li><a href="debruits.html">Experiência  2</a></li>
-                                        <li><a href="debruits.html">Experiência 3</a></li>
-                                        <li><a href="debruits.html">Experiência 4</a></li>
-                                        <li><a href="debruits.html">Experiência 5</a></li>
-                                        <li><a href="debruits.html">Experiência 6</a></li>
-                                        <li><a href="debruits.html">Experiência 7</a></li>
-                                        <li><a href="debruits.html">Experiência 8</a></li>
-                                        <li><a href="debruits.html">Experiência 9</a></li>
-
-                                    </ul>
+  
 
                             </section>
 
 
 
-                            </div>
+                        </div>
 
                 </div>
 
