--- a/paisagens.html
+++ b/paisagens.html
@@ -50,7 +50,7 @@
                         <div class="main-menu">
                             <ul>
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="Libro.html">Livro</a></li>
+                                <li><a href="Livro.html">Livro</a></li>
                                 <li><a href="LP.html">LP</a></li>
                                 <li><a href="Mapa.html">Mapa</a></li>
                                 <li><a href="Arquivo.html">Arquivo</a></li>
@@ -103,92 +103,35 @@
 
                             <section class="wrapper-inner">
 
-                                <a href="Libro.html">Amostras</a>
                                 <div class="description">
                                     <ul>
-                                        <p style="margin: 0; height: 5mm;"></p>
-                                        <li> <p>Amostra 2</p>                           
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/agitar_2.wav" type="audio/wav">
-                                        </audio>
-                                        <br>
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/amostra_2_raw_hidrated.wav" type="audio/wav">
-                                        </audio>
-                                        </li>
-                                        <p style="margin: 0; height: 5mm;"></p>
-                                        <li> <p>Amostra 3</p>                           
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/agitar_3.wav" type="audio/wav">
-                                        </audio>
-                                        <br>
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/amostra_3_raw_hidrated.wav" type="audio/wav">
-                                        </audio>
-                                        </li>
-                                        <li> <p>Amostra 4</p>                           
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/agitar_4.wav" type="audio/wav">
-                                        </audio>
-                                        <br>
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/amostra_4_raw_hidrated.wav" type="audio/wav">
-                                        </audio>
-                                        </li>
-                                        <li> <p>Amostra 5</p>                           
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/agitar_5.wav" type="audio/wav">
-                                        </audio>
-                                        <br>
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/hidratado_amostra_5.wav" type="audio/wav">
-                                        </audio>
-                                        </li>
-                                        <li> <p>Amostra 5</p>                           
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/agitar_5.wav" type="audio/wav">
-                                        </audio>
-                                        <br>
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/hidratado_amostra_5.wav" type="audio/wav">
-                                        </audio>
-                                        </li>
-                                        <li> <p>Amostra 6</p>                           
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/agitar_6.wav" type="audio/wav">
-                                        </audio>
-                                        <br>
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/amostra_6_raw_hidrated.wav" type="audio/wav">
-                                        </audio>
-                                        </li>
-                                        <li> <p>Amostra 7</p>                           
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/agitar_7.wav" type="audio/wav">
-                                        </audio>
-                                        <br>
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/amostra_7_raw_hidrated.wav" type="audio/wav">
-                                        </audio>
-                                        </li>
-                                        <li> <p>Amostra 8</p>                           
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/agitar_8.wav" type="audio/wav">
-                                        </audio>
-                                        <br>
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/amostra_8_raw_hidrated.wav" type="audio/wav">
-                                        </audio>
-                                        </li>
-                                        <li> <p>Amostra 9</p>                           
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/agitar_9.wav" type="audio/wav">
-                                        </audio>
-                                        <br>
-                                        <audio controls autoplay loop >
-                                        <source src="audio/amostras/amostra_9_raw_hidrated.wav" type="audio/wav">
-                                        </audio>
-                                        </li>
+                                     <li><a>viagem encosta Trafaria (travessa do povo da Raposeira)</a></li>
+                                     <li><a>Espacio_muestra_10</a></li>
+                                     <li><a>Biblioteca_encontro_capitaio</a></li>
+                                     <li><a>Biblioteca interior</a></li>
+                                     <li><a>Espacio_muestra_10</a></li>
+                                     <li><a>Caminando_espacio_muestra_10</a></li>
+                                     <li><a>Drone_secagem_impro_torroes</a></li>
+                                     <li><a>Viagem Encosta da Raposeira</a></li>
+                                     <li><a>Rua</a></li>
+                                     <li><a>Raposeira Fala Com Vizinho</a></li>
+                                     <li><a>Travesar Povo da Raposeira 1</a></li>
+                                     <li><a>Tableta 3</a></li>
+                                     <li><a>Tableta 2</a></li>
+                                     <li><a>Terreno 100mts Tableta Riscar Bater</a></li>
+                                     <li><a>Terreno 100mts Tableta Bater</a></li>
+                                     <li><a>Pa Terreno 100mts Tableta</a></li>
+                                     <li><a>Bomberos Voluntarios Pajaros</a></li>
+                                     <li><a>100mts Tableta Trafararia Amostra 2 1</a></li>
+                                     <li><a>Picareta Amostra 8 Terreno</a></li>
+                                     <li><a>Encosta Amostra 8 2 Dialogos-Acçoes</a></li>
+                                     <li><a>Encosta Amostras Amostra 8 2 Rua</a></li>
+                                     <li><a>Encosta  Amostra 8</a></li>
+                                     <li><a>Picareta Secagem espaço de trabalho</a></li>
+                                     <li><a>viagem encosta Trafaria (travessa do povo da Raposeira)</a></li>
+                                     <li><a>Drone_secagem_impro_torroes</a></li>
+                            
+
 
 
                                     </ul>
@@ -196,20 +139,6 @@
                                 </div>
 
 
-                                <div class="description">
-                                    <ul>
-                                        <p style="margin: 0; height: 5mm;"></p>
-                                        <li><a href="debruits.html">Experiência 1</a></li>
-                                        <li><a href="debruits.html">Experiência  2</a></li>
-                                        <li><a href="debruits.html">Experiência 3</a></li>
-                                        <li><a href="debruits.html">Experiência 4</a></li>
-                                        <li><a href="debruits.html">Experiência 5</a></li>
-                                        <li><a href="debruits.html">Experiência 6</a></li>
-                                        <li><a href="debruits.html">Experiência 7</a></li>
-                                        <li><a href="debruits.html">Experiência 8</a></li>
-                                        <li><a href="debruits.html">Experiência 9</a></li>
-
-                                    </ul>
 
                             </section>
 
@@ -217,7 +146,7 @@
 
                             </div>
 
-                </div>
+                </div>                         
 
             </div>
 
