--- a/Mapa.html
+++ b/Mapa.html
@@ -50,7 +50,7 @@
                         <div class="main-menu">
                             <ul>
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="Libro.html">Livro</a></li>
+                                <li><a href="Livro.html">Livro</a></li>
                                 <li><a href="LP.html">LP</a></li>
                                 <li><a href="Mapa.html">Mapa</a></li>
                                 <li><a href="Arquivo.html">Arquivo</a></li>
@@ -110,7 +110,9 @@
                                     com a terra, a sua gente a aquilo que elxs têm para oferecer.
 
                                 </div>
-
+                                <audio controls autoplay loop >
+                                    <source src="audio/paisagens/paisagem_encosta_amostra_5.wav" type="audio/wav">
+                                    </audio>
                             </section>
 
 
@@ -118,6 +120,7 @@
                 </div>
 
             </div>
+
 
         </div>
 
