--- a/Audiovisual.html
+++ b/Audiovisual.html
@@ -92,7 +92,7 @@
                             <section class="wrapper-inner">
 
                                 <header>
-                                    <h2 class="section-title">Arquivo de Som</h2>
+                                    <h2 class="section-title">Arquivo Audiovisual</h2>
                                 </header>
 
                             </section>
