--- a/Livro.html
+++ b/Livro.html
@@ -53,7 +53,8 @@
                                 <li><a href="Livro.html">Livro</a></li>
                                 <li><a href="LP.html">LP</a></li>
                                 <li><a href="Mapa.html">Mapa</a></li>
-                                <li><a href="Arquivo.html">Arquivo</a></li>
+                                <li><a href="Arquivo.html">Arquivo de Som</a></li>
+                                <li><a href="Audiovisual.html">Arquivo Audiovisual</a></li>
                                 <li><a href="Textos.html">Textos</a></li>
                             </ul>
                         </div>
@@ -95,11 +96,8 @@
                                 </header>
 
                             </section>
-                            <div style="position: relative; width: 100%; height: 0; padding-top: 78.8865%;
-                            padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
-                            border-radius: 8px; will-change: transform;">
-                                <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;" src="https://www.canva.com/design/DAGTwC-QPiA/dsoGN1-DfOPQc9Y7sVTttg/watch?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
-                             </iframe>
+                            <div>
+                            <iframe src="documents/somdotorraoLibro.pdf" width="100%" height="580"></iframe>
                             </div>
 
 
@@ -108,7 +106,8 @@
 
 
                                 <div class="description">
-                                    Texto sobre o Mapa.
+                                    
+                                    Breve texto sobre o documento.
 
                                 </div>
 
