--- a/ferramentas.html
+++ b/ferramentas.html
@@ -53,7 +53,8 @@
                                 <li><a href="Livro.html">Livro</a></li>
                                 <li><a href="LP.html">LP</a></li>
                                 <li><a href="Mapa.html">Mapa</a></li>
-                                <li><a href="Arquivo.html">Arquivo</a></li>
+                                <li><a href="Arquivo.html">Arquivo de Som</a></li>
+                                <li><a href="Audiovisual.html">Arquivo Audiovisual</a></li> 
                                 <li><a href="Textos.html">Textos</a></li>
                             </ul>
                         </div>
