--- a/amostras_samples.html
+++ b/amostras_samples.html
@@ -109,84 +109,84 @@
                                     <ul>
                                         <p style="margin: 0; height: 5mm;"></p>
                                         <li> <p>Amostra 2</p>                           
-                                        <audio controls autoplay loop >
+                                        <audio controls   >
                                         <source src="audio/amostras/agitar_2.wav" type="audio/wav">
                                         </audio>
                                         <br>
-                                        <audio controls autoplay loop >
+                                        <audio controls   >
                                         <source src="audio/amostras/amostra_2_raw_hidrated.wav" type="audio/wav">
                                         </audio>
                                         </li>
                                         <p style="margin: 0; height: 5mm;"></p>
                                         <li> <p>Amostra 3</p>                           
-                                        <audio controls autoplay loop >
+                                        <audio controls   >
                                         <source src="audio/amostras/agitar_3.wav" type="audio/wav">
                                         </audio>
                                         <br>
-                                        <audio controls autoplay loop >
+                                        <audio controls   >
                                         <source src="audio/amostras/amostra_3_raw_hidrated.wav" type="audio/wav">
                                         </audio>
                                         </li>
                                         <li> <p>Amostra 4</p>                           
-                                        <audio controls autoplay loop >
+                                        <audio controls   >
                                         <source src="audio/amostras/agitar_4.wav" type="audio/wav">
                                         </audio>
                                         <br>
-                                        <audio controls autoplay loop >
+                                        <audio controls   >
                                         <source src="audio/amostras/amostra_4_raw_hidrated.wav" type="audio/wav">
                                         </audio>
                                         </li>
                                         <li> <p>Amostra 5</p>                           
-                                        <audio controls autoplay loop >
+                                        <audio controls   >
                                         <source src="audio/amostras/agitar_5.wav" type="audio/wav">
                                         </audio>
                                         <br>
-                                        <audio controls autoplay loop >
+                                        <audio controls   >
                                         <source src="audio/amostras/hidratado_amostra_5.wav" type="audio/wav">
                                         </audio>
                                         </li>
                                         <li> <p>Amostra 5</p>                           
-                                        <audio controls autoplay loop >
+                                        <audio controls   >
                                         <source src="audio/amostras/agitar_5.wav" type="audio/wav">
                                         </audio>
                                         <br>
-                                        <audio controls autoplay loop >
+                                        <audio controls   >
                                         <source src="audio/amostras/hidratado_amostra_5.wav" type="audio/wav">
                                         </audio>
                                         </li>
                                         <li> <p>Amostra 6</p>                           
-                                        <audio controls autoplay loop >
+                                        <audio controls   >
                                         <source src="audio/amostras/agitar_6.wav" type="audio/wav">
                                         </audio>
                                         <br>
-                                        <audio controls autoplay loop >
+                                        <audio controls   >
                                         <source src="audio/amostras/amostra_6_raw_hidrated.wav" type="audio/wav">
                                         </audio>
                                         </li>
                                         <li> <p>Amostra 7</p>                           
-                                        <audio controls autoplay loop >
+                                        <audio controls   >
                                         <source src="audio/amostras/agitar_7.wav" type="audio/wav">
                                         </audio>
                                         <br>
-                                        <audio controls autoplay loop >
+                                        <audio controls   >
                                         <source src="audio/amostras/amostra_7_raw_hidrated.wav" type="audio/wav">
                                         </audio>
                                         </li>
                                         <li> <p>Amostra 8</p>                           
-                                        <audio controls autoplay loop >
+                                        <audio controls   >
                                         <source src="audio/amostras/agitar_8.wav" type="audio/wav">
                                         </audio>
                                         <br>
-                                        <audio controls autoplay loop >
+                                        <audio controls   >
                                         <source src="audio/amostras/amostra_8_raw_hidrated.wav" type="audio/wav">
                                         </audio>
                                         </li>
                                         <li> <p>Amostra 9</p>                           
-                                        <audio controls autoplay loop >
+                                        <audio controls   >
                                         <source src="audio/amostras/agitar_9.wav" type="audio/wav">
                                         </audio>
                                         <br>
-                                        <audio controls autoplay loop >
+                                        <audio controls   >
                                         <source src="audio/amostras/amostra_9_raw_hidrated.wav" type="audio/wav">
                                         </audio>
                                         </li>
@@ -198,7 +198,7 @@
 
 
                                 <div class="description">
-                                    <ul>
+                                    <!-- <ul>
                                         <p style="margin: 0; height: 5mm;"></p>
                                         <li><a href="debruits.html">Experiência 1</a></li>
                                         <li><a href="debruits.html">Experiência  2</a></li>
@@ -210,7 +210,7 @@
                                         <li><a href="debruits.html">Experiência 8</a></li>
                                         <li><a href="debruits.html">Experiência 9</a></li>
 
-                                    </ul>
+                                    </ul> -->
 
                             </section>
 
