--- a/paisagens.html
+++ b/paisagens.html
@@ -106,31 +106,27 @@
 
                                 <div class="description">
                                     <ul>
-                                     <li><a href="https://on.soundcloud.com/XdfBuJN4f8y4xCGi7">viagem encosta Trafaria (travessa do povo da Raposeira)</a></li>
-                                     <li><a href="https://on.soundcloud.com/N7WNxPu8zYGfWv5y7">Espacio_muestra_10</a></li>
-                                     <li><a href="https://on.soundcloud.com/7WYy4dKGsia8uBxB8">Biblioteca_encontro_capitao</a></li>
-                                     <li><a href="https://on.soundcloud.com/pifcWw3NZuHEhuQCA">Biblioteca interior</a></li>
-                                     <li><a href="https://on.soundcloud.com/rfoud1jhj5ir1xys6">Espacio_muestra_10</a></li>
-                                     <li><a href="https://on.soundcloud.com/uTCMucL97en7oshd8">Caminando_espacio_muestra_10</a></li>
-                                     <li><a href="https://on.soundcloud.com/r7QgYc4jzkL1fY6z6">Drone_secagem_impro_torroes</a></li>
-                                     <li><a href="https://on.soundcloud.com/j4KNEkR6Hnb5ueRZ7">Viagem Encosta da Raposeira</a></li>
-                                     <li><a href="https://on.soundcloud.com/XbTD8491r2CJhHgi9">Rua</a></li>
-                                     <li><a href="https://on.soundcloud.com/7bKRFxHEuUu7hx1d8">Raposeira Fala Com Vizinho</a></li>
-                                     <li><a href="https://on.soundcloud.com/HnSVbewknaoSYu8cA">Travesar Povo da Raposeira 1</a></li>
-                                     <li><a href="https://on.soundcloud.com/4FUp8QyWt3PhgMJf7">Tableta 3</a></li>
-                                     <li><a href="https://on.soundcloud.com/NH2CkMk4HLjvt53N7">Tableta 2</a></li>
-                                     <li><a href="https://on.soundcloud.com/XPhnwiFFQjb5wUS58">Tableta 2</a></li>
-                                     <li><a href="https://on.soundcloud.com/GrGxPttMUcf4CkGSA">Terreno 100mts Tableta Riscar Bater</a></li>
-                                     <li><a href="https://on.soundcloud.com/TvNbLCH2sFTv9EjL9">Terreno 100mts Tableta Bater</a></li>
-                                     <li><a href="https://on.soundcloud.com/wCq7hEqXx14PYEDZ6">Pa Terreno 100mts Tableta</a></li>
-                                     <li><a href="https://on.soundcloud.com/BUEmRgZNGunMGcng8">Bomberos Voluntarios Pajaros</a></li>
-                                     <li><a href="https://on.soundcloud.com/MZb5PryU5s34Dv167">100mts Tableta Trafararia Amostra 2 1</a></li>
-                                     <li><a href="https://on.soundcloud.com/27zGWCeFDm9ThscC6">Picareta Amostra 8 Terreno</a></li>
-                                     <li><a href="https://on.soundcloud.com/RACtEgj1rcNSvmEr6">Encosta Amostra 8 2 Dialogos-Acçoes</a></li>
-                                     <li><a href="https://on.soundcloud.com/AotUawgW4pCdmjvH9">Encosta Amostras Amostra 8 2 Rua</a></li>
-                                     <li><a href="https://on.soundcloud.com/GEkSmNDDGBWKTEWr8">Picareta Secagem espaço de trabalho</a></li>
-                                     <li><a href="https://on.soundcloud.com/JvTLbFc79Qq6VpFA7">viagem encosta Trafaria (travessa do povo da Raposeira)</a></li>
-                                     <li><a href="https://on.soundcloud.com/yy8zRRsFYGz9EmCi6">Drone_secagem_impro_torroes</a></li>
+                                     <li><a href="https://drive.google.com/file/d/1q2rIO9YuaAj8iJjvv5o5W_Yit78unrPY/view?usp=drive_link">viagem encosta Trafaria (travessa do povo da Raposeira)</a></li>
+                                     <li><a href="https://drive.google.com/file/d/18L4xIyXxBWtsnDYQ9Ergcfe4pOtg7iy5/view?usp=drive_link">Biblioteca_encontro_capitao</a></li>
+                                     <li><a href="https://drive.google.com/file/d/1rJ5AtrPlC0-CHImrRSj9Q0b0CtUmTak3/view?usp=drive_link">Biblioteca interior</a></li>
+                                     <li><a href="https://drive.google.com/file/d/1Zi2Fec2Km8X_VNZjfPL6mqDy22qL6zCR/view?usp=drive_link">Espacio_muestra_10</a></li>
+                                     <li><a href="https://drive.google.com/file/d/1bJFlRZJDy4Jx78eBTcm5W3Uqn6ogPErq/view?usp=drive_link">Caminando_espacio_muestra_10</a></li>
+                                     <li><a href="https://drive.google.com/file/d/1NpWS9kth2paIzTfmDEPXDFHDmG0ZCdw4/view?usp=drive_link">Drone_secagem_impro_torroes</a></li>
+                                     <li><a href="https://drive.google.com/file/d/1nHuyaxXIw0ttRYiYXmrP_w8jjitRgM-Y/view?usp=drive_link">Rua</a></li>
+                                     <li><a href="https://drive.google.com/file/d/1w6d_rjF-1nBEJ3mohXLLuJ_bnRpafECP/view?usp=drive_link">Raposeira Fala Com Vizinho</a></li>
+                                     <li><a href="https://drive.google.com/file/d/1R8E4d4ocxiV8NDEXjRmaJ8Ml_SzQCqHW/view?usp=drive_link">Travesa Povo da Raposeira 1</a></li>
+                                     <li><a href="https://drive.google.com/file/d/1O-YzLZZcIBK8YrDt4lGs9xycI1xAQZ7S/view?usp=drive_link">Tableta 3</a></li>
+                                     <li><a href="https://drive.google.com/file/d/1PqoNTH6XLlvcStHowmur5QaZle2-dkAv/view?usp=drive_link">Tableta 2</a></li>
+                                     <li><a href="https://drive.google.com/file/d/1RtVzfA_Joir5Z9ZbA_zMYmUx-Veb6m89/view?usp=drive_link">Tableta 1</a></li>
+                                     <li><a href="https://drive.google.com/file/d/1byaS_CMxnGnxIYBGvujCJIPErXwakOnH/view?usp=drive_link">Terreno 100mts Tableta Riscar Bater</a></li>
+                                     <li><a href="https://drive.google.com/file/d/17h_aeNQa9JZ0gpV7u77_IkXt-ueMw9Cl/view?usp=drive_link">Terreno 100mts Tableta Bater</a></li>
+                                     <li><a href="https://drive.google.com/file/d/1f4X46J1vyEU_COM2CaRWD_eQz9MNT0jz/view?usp=drive_link">Pa Terreno 100mts Tableta</a></li>
+                                     <li><a href="https://drive.google.com/file/d/1AUmVrra5ir4loXoT_QA_7q7_SaFVp69P/view?usp=drive_link">Bomberos Voluntarios Pajaros</a></li>
+                                     <li><a href="https://drive.google.com/file/d/1sznLi-RQ4FkwELszYS7rQsv6mTfE42NZ/view?usp=drive_link">100mts Tableta Trafararia Amostra 2 1</a></li>
+                                     <li><a href="https://drive.google.com/file/d/1PYbKO-EcO1YXsHY1UEWXaVHU_lBCaqez/view?usp=drive_link">Picareta Amostra 8 Terreno</a></li>
+                                     <li><a href="https://drive.google.com/file/d/1Vrr9K6pogZaqPyi1PpY7TeqZtRayDP6b/view?usp=drive_link">Encosta Amostra 8 2 Dialogos-Acçoes</a></li>
+                                     <li><a href="https://drive.google.com/file/d/1oiH-uW-lG0yBp1Up2ZCuNJazhFgFrDh_/view?usp=drive_link">Encosta Amostras Amostra 8 2 Rua</a></li>
+                                     <li><a href="https://drive.google.com/file/d/19aVyUd3Jt47JsKiJ7LXh9pr9X9M0dOcA/view?usp=drive_link">Picareta Secagem espaço de trabalho</a></li>
                             
 
 
